# better-cape-mcp

./: README.md  pyproject.toml
better_cape_mcp/: server.py
better_cape_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_config.py  test_helpers.py  test_request.py  test_tools.py
