[project]
name = "better-cape-mcp"
version = "0.1.0"
description = "Standalone MCP server for CAPEv2 malware sandbox"
requires-python = ">=3.10"
dependencies = ["fastmcp", "httpx"]

[project.scripts]
cape-mcp = "better_cape_mcp.server:main"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "respx"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
